test/files/neg/t3507.check
t3507.scala:13: error: No Manifest available for object _1.b.c.
  mani/*[object _1.b.c]*/(c) // kaboom in manifestOfType / TreeGen.mkAttributedQualifier
                         ^
one error found
